# rosbag-merge

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi-and-test-pypi.yml
examples/: main_direct.py
src/rosbag_merge/: __init__.py  bag_stream.py  csv_merge.py  main.py  merge_bags.py  rosbag_to_csv.py
src/rosbag_merge/deprecated/: csv_merge.py
tests/: topic_list.txt
tests/data/: merged_bag.bag
tests/data/raw/: TB3_WAFFLE_SLAM_cmd_vel_only.bag  TB3_WAFFLE_SLAM_imu_only.bag  TB3_WAFFLE_SLAM_odom_tf_static.bag
